infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: elaundry.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 4001
          - path: /admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 4002
          - path: /laundries/?(.*)
            pathType: Prefix
            backend:
              service:
                name: laundry
                port:
                  number: 4003
          - path: /laundriesbycollegeid/?(.*)
            pathType: Prefix
            backend:
              service:
                name: laundry
                port:
                  number: 4003        
          - path: /posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 4004
